gcc/testsuite/algol68/compile/mcts/oper06.a68
# { dg-options "-fstropping=upper" }  #

BEGIN OP + = (REAL a, b) REAL: a - b; # { dg-error "" } #
      OP + = (REF REAL a, b) REAL: a - b; # { dg-error "" } #
      SKIP
END
